--- a/Dockerfile.cdn
+++ b/Dockerfile.cdn
@@ -1,4 +1,4 @@
-FROM golang:1.15.7-alpine3.13 as builder
+FROM golang:1.15.1 as builder
 
 WORKDIR /go/src/github.com/dragonflyoss/Dragonfly2
 RUN apk --no-cache add bash make gcc libc-dev git
@@ -18,7 +18,7 @@ COPY --from=builder /go/src/github.com/dragonflyoss/Dragonfly2/hack/start-cdn.sh
 COPY --from=builder /go/src/github.com/dragonflyoss/Dragonfly2/hack/cdn-nginx.conf /etc/nginx/nginx.conf
 COPY --from=builder /opt/dragonfly/df-cdn/cdn /opt/dragonfly/df-cdn/cdn
 
-# supernode will listen 8001,8003 in default.
+# cdn will listen 8001,8003 in default.
 EXPOSE 8001 8003
 
 ENTRYPOINT ["/root/start.sh"]
