--- a/docs/config/dfget-daemon.yaml
+++ b/docs/config/dfget-daemon.yaml
@@ -26,9 +26,9 @@ keep_storage: false
 # daemon will send tasks to a fixed scheduler by hashing the task url and meta data
 # caution: only tcp is supported
 schedulers:
-# below example is a stand address
-- type: tcp
-  addr: 127.0.0.1:8002
+  # below example is a stand address
+  - type: tcp
+    addr: 127.0.0.1:8002
 # below example is the short address format
 #- 127.0.0.1:8002
 #- tcp://127.0.0.1:8002
@@ -122,3 +122,39 @@ storage:
   #                            the output file will be the peer data for uploading to other peers
   #                            when user delete or change this file, this peer data will be corrupted
   strategy: io.d7y.storage.v2.simple
+
+# proxy service option
+proxy:
+  registry_mirror:
+    # url for the registry mirror
+    url: https://index.docker.io
+    # whether to ignore https certificate errors
+    insecure: false
+    # optional certificates if the remote server uses self-signed certificates
+    certs: []
+    # whether to request the remote registry directly
+    direct: false
+
+  proxies:
+    # proxy all http image layer download requests with dfget
+    - regx: blobs/sha256.*
+    # change http requests to some-registry to https and proxy them with dfget
+    - regx: some-registry/
+      use_https: true
+    # proxy requests directly, without dfget
+    - regx: no-proxy-reg
+      direct: true
+    # proxy requests with redirect
+    - regx: some-registry
+      redirect: another-registry
+
+  hijack_https:
+    # key pair used to hijack https requests
+    cert: ""
+    key: ""
+    hosts:
+      - regx: mirror.aliyuncs.com:443 # regexp to match request hosts
+        # whether to ignore https certificate errors
+        insecure: false
+        # optional certificates if the host uses self-signed certificates
+        certs: []
