--- a/Dockerfile.scheduler
+++ b/Dockerfile.scheduler
@@ -7,7 +7,7 @@ RUN apk --no-cache add bash make gcc libc-dev git
 COPY . /go/src/d7y.io/dragonfly/v2
 
 ARG GOPROXY
-RUN make build-dfget && make install-dfget
+RUN make build-scheduler && make install-scheduler
 
 FROM alpine:3.12
 
@@ -15,8 +15,8 @@ RUN apk --no-cache add ca-certificates bash && echo 'hosts: files dns' > /etc/ns
 
 ENV PATH=/opt/dragonfly/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
-COPY --from=builder /opt/dragonfly/bin/dfget /opt/dragonfly/bin/dfget
+COPY --from=builder /opt/dragonfly/bin/scheduler /opt/dragonfly/bin/scheduler
 
-EXPOSE 65001
+EXPOSE 8001
 
-ENTRYPOINT ["/opt/dragonfly/bin/dfget", "daemon", "--config", "/etc/dragonfly/dfdaemon.yaml"]
+ENTRYPOINT ["/opt/dragonfly/bin/scheduler"]
