--- a/docs/config/scheduler.yml
+++ b/docs/config/scheduler.yml
@@ -19,6 +19,6 @@ cdn:
     -
       - cdn-name : "cdn"
         ip: "127.0.0.1"
-        rpcPort: 8003
+        rpc-port: 12345
         download-port: 8002
 
