--- a/cdnsystem/config/cdn.yml
+++ b/cdnsystem/config/cdn.yml
@@ -11,9 +11,9 @@ base:
   # default: 8001
   downloadPort: 8001
 
-  # HomeDir is working directory of cdn.
-  # default: /tmp/cdn
-  homeDir: /tmp/cdn
+  #  # HomeDir is working directory of cdn.
+  #  # default: /home/admin/cdn-system
+  #  homeDir: /tmp/cdn
 
   # SystemReservedBandwidth is the network bandwidth reserved for system software.
   # default: 20 MB, in format of G(B)/g/M(B)/m/K(B)/k/B, pure number will also be parsed as Byte.
@@ -71,9 +71,12 @@ base:
 
 plugins:
   storage:
-    - name: local
+    - name: disk
       enabled: true
       config: "baseDir: /tmp/cdnsystem/"
+    - name: hybrid
+      enable: true
+      config: ""
   sourceClient:
     - name: http
       enable: true
