--- a/Dockerfile.dfdaemon
+++ b/Dockerfile.dfdaemon
@@ -2,7 +2,9 @@ FROM golang:1.15.8-alpine as builder
 
 WORKDIR /go/src/d7y.io/dragonfly/v2
 
-RUN apk --no-cache add bash make gcc libc-dev git
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+
+RUN apk --no-cache add bash make gcc libc-dev git busybox-extras
 
 COPY . /go/src/d7y.io/dragonfly/v2
 
@@ -19,4 +21,4 @@ COPY --from=builder /opt/dragonfly/bin/dfget /opt/dragonfly/bin/dfget
 
 EXPOSE 65001
 
-ENTRYPOINT ["/opt/dragonfly/bin/dfget", "daemon", "--config", "/etc/dragonfly/dfdaemon.yaml"]
+ENTRYPOINT ["/opt/dragonfly/bin/dfget", "daemon"]
