--- a/Dockerfile.scheduler
+++ b/Dockerfile.scheduler
@@ -2,7 +2,9 @@ FROM golang:1.15.8-alpine as builder
 
 WORKDIR /go/src/d7y.io/dragonfly/v2
 
-RUN apk --no-cache add bash make gcc libc-dev git
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+
+RUN apk --no-cache add bash make gcc libc-dev git busybox-extras
 
 COPY . /go/src/d7y.io/dragonfly/v2
 
@@ -17,6 +19,6 @@ ENV PATH=/opt/dragonfly/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/s
 
 COPY --from=builder /opt/dragonfly/bin/scheduler /opt/dragonfly/bin/scheduler
 
-EXPOSE 8001
+EXPOSE 8002
 
 ENTRYPOINT ["/opt/dragonfly/bin/scheduler"]
