feat: docker-compose

--- a/Dockerfile.cdn
+++ b/Dockerfile.cdn
@@ -2,9 +2,7 @@ FROM golang:1.15.8-alpine as builder
 
 WORKDIR /go/src/d7y.io/dragonfly/v2
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
-
-RUN apk --no-cache add bash make gcc libc-dev git busybox-extras
+RUN apk --no-cache add bash make gcc libc-dev git
 
 COPY . /go/src/d7y.io/dragonfly/v2
 
@@ -14,6 +12,8 @@ ARG GOPROXY
 RUN make build-cdn && make install-cdn
 
 FROM dragonflyoss/nginx:apline
+
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
 RUN apk --no-cache add ca-certificates bash
 
