--- a/hack/testdata/dfget-daemon.yml
+++ b/hack/testdata/dfget-daemon.yml
@@ -60,6 +60,6 @@ proxy:
     listen: 0.0.0.0
     port: 65001
   registry_mirror:
-    url: https://harbor.home.jim.plus:33333
+    url: https://index.docker.io
   proxies:
     - regx: blobs/sha256.*
