feat: rm busybox-extras

--- a/Dockerfile.dfdaemon
+++ b/Dockerfile.dfdaemon
@@ -2,7 +2,7 @@ FROM golang:1.15.8-alpine as builder
 
 WORKDIR /go/src/d7y.io/dragonfly/v2
 
-RUN apk --no-cache add bash make gcc libc-dev git busybox-extras
+RUN apk --no-cache add bash make gcc libc-dev git
 
 COPY . /go/src/d7y.io/dragonfly/v2
 
