--- a/docs/config/scheduler.yml
+++ b/docs/config/scheduler.yml
@@ -1,6 +1,8 @@
 # This file is the template of scheduler configuration file.
 # You can configure your scheduler by change the parameter according your requirement.
 ---
+debug: true
+
 server:
   # ListenPort is the ip and port supernode server listens on.
   # default: 8002
