--- a/cdnsystem/config/cdn-nginx.conf
+++ b/cdnsystem/config/cdn-nginx.conf
@@ -20,8 +20,8 @@ http {
     client_max_body_size    3m;
 
     index                   index.html index.htm;
-    access_log              on;
-    log_not_found           on;
+    access_log              off;
+    log_not_found           off;
 
     gzip                    on;
     gzip_http_version       1.0;
@@ -45,7 +45,7 @@ http {
     server {
         listen              8001;
         location / {
-            root /tmp/cdn/repo;
+            root /home/admin/cdn-system/repo;
         }
     }
 }
