add: deploy manager and mysql
Signed-off-by: hanson.yj <hanson.yj@alibaba-inc.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,29 @@ services:
     volumes:
       - ./hack/testdata/cdn.yml:/etc/dragonfly/cdn.yml
       - ./log/dragonfly/cdn:/root/logs/dragonfly
+
+  manager:
+    build:
+      context: .
+      dockerfile: Dockerfile.manager
+    depends_on:
+      - db
+    container_name: manager
+    hostname: manager
+    volumes:
+      - ./hack/testdata/manager.yml:/etc/dragonfly/manager.yml
+      - ./log/dragonfly/manager:/root/logs/dragonfly
+    entrypoint: sh -c '/root/wait-for.sh db:3306 -t 30 -- /opt/dragonfly/bin/manager'
+
+  db:
+    image: mysql:8.0.19
+    volumes:
+      - ./mysql:/var/lib/mysql
+    restart: always
+    container_name: db
+    hostname: db
+    environment:
+      MYSQL_ROOT_PASSWORD: root1234
+      MYSQL_DATABASE: config_db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root1234
