--- a/docs/config/dfget-daemon.yaml
+++ b/docs/config/dfget-daemon.yaml
@@ -66,7 +66,7 @@ download:
     # download service listen address
     # current, only support unix domain socket
     unix_listen:
-      socket: /tmp/dfdamon.sock
+      socket: /tmp/dfdaemon.sock
   # peer grpc option
   # peer grpc service send pieces info to other peers
   peer_grpc:
