--- a/client/daemon/test/testdata/config/daemon.yml
+++ b/client/daemon/test/testdata/config/daemon.yml
@@ -5,9 +5,11 @@ lock_file: /tmp/dfdaemon.lock
 data_dir: /tmp/dragonfly/dfdaemon/
 work_home: /tmp/dragonfly/dfdaemon/
 keep_storage: false
-schedulers:
-  - type: tcp
-    addr: 127.0.0.1:8002
+scheduler:
+  net_addrs:
+    - type: tcp
+      addr: 127.0.0.1:8002
+  schedule_timeout: 0
 verbose: true
 
 host:
