--- a/cdnsystem/config/cdn.yml
+++ b/cdnsystem/config/cdn.yml
@@ -28,8 +28,6 @@ base:
   # default: 3m
   failAccessInterval: 3m
 
-  # gc related
-
   # GCInitialDelay is the delay time from the start to the first GC execution.
   # default: 6s
   gcInitialDelay: 6s
@@ -38,35 +36,20 @@ base:
   # default: 2m0s
   gcMetaInterval: 2m
 
+  # gcStorageInterval is the interval time to execute GC storage.
+  # default: 15s
+  gcStorageInterval: 15s
+
   # TaskExpireTime when a task is not accessed within the taskExpireTime,
   # and it will be treated to be expired.
   # default: 3m0s
   taskExpireTime: 3m
 
-  # GCDiskInterval is the interval time to execute GC disk.
-  # default: 15s
-  gcDiskInterval: 15s
-
-  # YoungGCThreshold if the available disk space is more than YoungGCThreshold
-  # and there is no need to GC disk.
-  # default: 100GB
-  youngGCThreshold: 100G
-
-  #  FullGCThreshold if the available disk space is less than FullGCThreshold
-  #  and the cdn system should gc all task files which are not being used.
-  #  default: 5GB
-  fullGCThreshold: 5G
-
-  # IntervalThreshold is the threshold of the interval at which the task file is accessed.
-  # default: 2h0m0s
-  IntervalThreshold: 2h
-
-  # CleanRatio is the ratio to clean the disk and it is based on 10.
-  # It means the value of CleanRatio should be [1-10].
-  CleanRatio: 1
-
   # StoragePattern is the pattern of storage policy, [disk/hybrid]
-  StoragePattern: disk
+  storagePattern: disk
+
+  # Console shows log on console
+  console: false
 
 plugins:
   storage:
