--- a/Dockerfile.cdn
+++ b/Dockerfile.cdn
@@ -1,4 +1,4 @@
-FROM golang:1.15.8-alpine as builder
+FROM golang:1.15.10-alpine as builder
 
 WORKDIR /go/src/d7y.io/dragonfly/v2
 RUN apk --no-cache add bash make gcc libc-dev git
@@ -10,9 +10,11 @@ COPY . /go/src/d7y.io/dragonfly/v2
 ARG GOPROXY
 RUN make build-cdn && make install-cdn
 
-FROM dragonflyoss/nginx:apline
+FROM nginx:1.19-alpine
 
-RUN apk --no-cache add ca-certificates bash
+# TODO hack for China mainland, remove later
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
+    apk --no-cache add ca-certificates bash && echo 'hosts: files dns' > /etc/nsswitch.conf
 
 COPY --from=builder /go/src/d7y.io/dragonfly/v2/hack/start-cdn.sh /root/start.sh
 COPY --from=builder /go/src/d7y.io/dragonfly/v2/hack/cdn-nginx.conf /etc/nginx/nginx.conf
