--- a/hack/packaging/rpm/Dockerfile
+++ b/hack/packaging/rpm/Dockerfile
@@ -18,5 +18,9 @@ COPY --from=build /go/src/d7y.io/dragonfly/v2/bin/linux_amd64/dfget /root/rpmbui
 COPY --from=build /go/src/d7y.io/dragonfly/v2/docs/ChangeLog /root/rpmbuild/SOURCES/
 COPY --from=build /go/src/d7y.io/dragonfly/v2/docs/cli-reference/dfget.1 /root/rpmbuild/SOURCES/
 COPY --from=build /go/src/d7y.io/dragonfly/v2/hack/packaging/systemd/dfget-daemon.service /root/rpmbuild/SOURCES/
+COPY --from=build /go/src/d7y.io/dragonfly/v2/hack/packaging/systemd/dfget-daemon.service.d/CPUQuota.conf /root/rpmbuild/SOURCES/
+COPY --from=build /go/src/d7y.io/dragonfly/v2/hack/packaging/systemd/dfget-daemon.service.d/CPUShares.conf /root/rpmbuild/SOURCES/
+COPY --from=build /go/src/d7y.io/dragonfly/v2/hack/packaging/systemd/dfget-daemon.service.d/MemoryLimit.conf /root/rpmbuild/SOURCES/
+COPY --from=build /go/src/d7y.io/dragonfly/v2/hack/packaging/systemd/fix.dfget-daemon.cpuset.sh /root/rpmbuild/SOURCES/
 COPY --from=build /go/src/d7y.io/dragonfly/v2/docs/config/dfget-daemon.yaml /root/rpmbuild/SOURCES/
 COPY --from=build /go/src/d7y.io/dragonfly/v2/hack/packaging/rpm/dfget.spec /root/rpmbuild/SPECS/
