--- a/client/config/testdata/config/daemon.yml
+++ b/client/config/testdata/config/daemon.yml
@@ -71,7 +71,7 @@ proxy:
   registry_mirror:
     url: https://index.docker.io
     insecure: true
-    certs: [./test/testdata/certs/sca.crt]
+    certs: [./testdata/certs/sca.crt]
     direct: false
   proxies:
     - regx: blobs/sha256.*
@@ -84,4 +84,4 @@ proxy:
     hosts:
       - regx: mirror.aliyuncs.com:443
         insecure: true
-        certs: [./test/testdata/certs/sca.crt]
+        certs: [./testdata/certs/sca.crt]
