--- a/deploy/kubernetes/charts/templates/scheduler-deploy.yaml
+++ b/deploy/kubernetes/charts/templates/scheduler-deploy.yaml
@@ -4,141 +4,59 @@ metadata:
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.client.name }}"
+    component: "{{ .Values.scheduler.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "dragonfly.scheduler.fullname" . }}
+  {{- if .Values.scheduler.deploymentAnnotations }}
+  annotations:
+{{ toYaml .Values.scheduler.deploymentAnnotations | indent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.scheduler.replicas }}
   template:
     metadata:
       labels:
-        app: {{ template "dragonfly.name" . }}
+        app: {{ template "dragonfly.scheduler.fullname" . }}
         component: "{{ .Values.scheduler.name }}"
         release: {{ .Release.Name }}
-    spec:
-      {{- if or .Values.client.antiAffinity .Values.client.nodeAffinity }}
-      affinity:
-      {{- end }}
-      {{- if eq .Values.client.antiAffinity "hard" }}
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - topologyKey: "kubernetes.io/hostname"
-              labelSelector:
-                matchLabels:
-                  app: "{{ template "elasticsearch.name" . }}"
-                  release: "{{ .Release.Name }}"
-                  component: "{{ .Values.client.name }}"
-      {{- else if eq .Values.client.antiAffinity "soft" }}
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 1
-            podAffinityTerm:
-              topologyKey: kubernetes.io/hostname
-              labelSelector:
-                matchLabels:
-                  app: "{{ template "elasticsearch.name" . }}"
-                  release: "{{ .Release.Name }}"
-                  component: "{{ .Values.client.name }}"
-      {{- end }}
-      {{- with .Values.client.nodeAffinity }}
-        nodeAffinity:
-{{ toYaml . | indent 10 }}
-      {{- end }}
-{{- if .Values.client.nodeSelector }}
-      nodeSelector:
-{{ toYaml .Values.client.nodeSelector | indent 8 }}
-{{- end }}
-{{- if .Values.client.tolerations }}
-      tolerations:
-{{ toYaml .Values.client.tolerations | indent 8 }}
-{{- end }}
-      initContainers:
-      # see https://www.elastic.co/guide/en/elasticsearch/reference/current/vm-max-map-count.html
-      # and https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration-memory.html#mlockall
-      - name: "sysctl"
-        image: "{{ .Values.initImage.repository }}:{{ .Values.initImage.tag }}"
-        imagePullPolicy: {{ .Values.initImage.pullPolicy | quote }}
-        command: ["sysctl", "-w", "vm.max_map_count=262144"]
-        securityContext:
-          privileged: true
-{{- if .Values.extraInitContainers }}
-{{ tpl .Values.extraInitContainers . | indent 6 }}
-{{- end }}
-      containers:
-      - name: elasticsearch
-        env:
-        - name: NODE_DATA
-          value: "false"
-{{- if hasPrefix "5." .Values.appVersion }}
-        - name: NODE_INGEST
-          value: "false"
-{{- end }}
-        - name: NODE_MASTER
-          value: "false"
-        - name: DISCOVERY_SERVICE
-          value: {{ template "elasticsearch.fullname" . }}-discovery
-        - name: PROCESSORS
-          valueFrom:
-            resourceFieldRef:
-              resource: limits.cpu
-        - name: ES_JAVA_OPTS
-          value: "-Djava.net.preferIPv4Stack=true -Xms{{ .Values.client.heapSize }} -Xmx{{ .Values.client.heapSize }} {{ .Values.cluster.additionalJavaOpts }}"
-        {{- range $key, $value :=  .Values.cluster.env }}
-        - name: {{ $key }}
-          value: {{ $value | quote }}
+        {{- if .Values.scheduler.podAnnotations }}
+      annotations:
+{{ toYaml .Values.scheduler.podAnnotations | indent 8 }}
         {{- end }}
-        resources:
-{{ toYaml .Values.client.resources | indent 12 }}
-        readinessProbe:
-          httpGet:
-            path: /_cluster/health
-            port: 9200
-          initialDelaySeconds: 5
-        livenessProbe:
-          httpGet:
-            path: /_cluster/health?local=true
-            port: 9200
-          initialDelaySeconds: 90
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
-        ports:
-        - containerPort: 9200
-          name: http
-        - containerPort: 9300
-          name: transport
-        volumeMounts:
-        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
-          name: config
-          subPath: elasticsearch.yml
-{{- if hasPrefix "2." .Values.image.tag }}
-        - mountPath: /usr/share/elasticsearch/config/logging.yml
-          name: config
-          subPath: logging.yml
-{{- end }}
-{{- if hasPrefix "5." .Values.image.tag }}
-        - mountPath: /usr/share/elasticsearch/config/log4j2.properties
-          name: config
-          subPath: log4j2.properties
-{{- end }}
-{{- if .Values.cluster.keystoreSecret }}
-        - name: keystore
-          mountPath: "/usr/share/elasticsearch/config/elasticsearch.keystore"
-          subPath: elasticsearch.keystore
-          readOnly: true
-{{- end }}
-{{- if .Values.image.pullSecrets }}
-      imagePullSecrets:
-      {{- range $pullSecret := .Values.image.pullSecrets }}
-        - name: {{ $pullSecret }}
+    spec:
+      {{- if .Values.scheduler.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.scheduler.nodeSelector | indent 8 }}
       {{- end }}
-{{- end }}
+      {{- if .Values.scheduler.tolerations }}
+      tolerations:
+{{ toYaml .Values.scheduler.tolerations | indent 8 }}
+      {{- end }}
+      {{- if .Values.scheduler.affinity }}
+      affinity:
+{{ toYaml .Values.scheduler.affinity | indent 8 }}
+      {{- end }}
+      {{- if quote .Values.scheduler.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .Values.scheduler.terminationGracePeriodSeconds }}
+      {{- end }}
+      {{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") (.Values.scheduler.priorityClassName) }}
+      priorityClassName: {{ .Values.scheduler.priorityClassName }}
+      {{- end }}
+      containers:
+      - name: scheduler
+        image: "{{ .Values.scheduler.image }}:{{ .Values.scheduler.tag }}"
+        imagePullPolicy: {{ .Values.scheduler.pullPolicy | quote }}
+        resources:
+{{ toYaml .Values.scheduler.resources | indent 12 }}
+        ports:
+        - containerPort: 8002
+          protocol: TCP
+        volumeMounts:
+        - name: config
+          mountPath: "/etc/dragonfly/scheduler.yaml"
+          subPath: scheduler.yaml
       volumes:
       - name: config
         configMap:
-          name: {{ template "elasticsearch.fullname" . }}
-{{- if .Values.cluster.keystoreSecret }}
-      - name: keystore
-        secret:
-          secretName: {{ .Values.cluster.keystoreSecret }}
-{{- end }}
+          name: {{ template "dragonfly.scheduler.fullname" . }}
