--- a/deploy/kubernetes/charts/templates/scheduler-svc.yaml
+++ b/deploy/kubernetes/charts/templates/scheduler-svc.yaml
@@ -1,34 +1,41 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: {{template "dragonfly.fullname" . }}
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     component: "{{ .Values.scheduler.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "dragonfly.scheduler.fullname" . }}
 {{- if .Values.scheduler.serviceAnnotations }}
   annotations:
 {{ toYaml .Values.scheduler.serviceAnnotations | indent 4 }}
 {{- end }}
-
 spec:
   ports:
-    - name: http
-      port: 9200
-      targetPort: http
-  selector:
-    app: {{ template "elasticsearch.name" . }}
-    component: "{{ .Values.client.name }}"
-    release: {{ .Release.Name }}
-  type: {{ .Values.client.serviceType }}
-{{- if .Values.client.loadBalancerIP }}
-  loadBalancerIP: "{{ .Values.client.loadBalancerIP }}"
+    - port: {{.Values.scheduler.service.port}}
+      name: http
+      targetPort: {{ .Values.scheduler.service.targetPort }}
+      {{- if (and (eq .Values.scheduler.service.type "NodePort") (not (empty .Values.scheduler.service.nodePort))) }}
+      nodePort: {{.Values.scheduler.service.nodePort}}
+      {{- end }}
+{{- range $index, $port := .Values.scheduler.service.extraPorts }}
+    - port: {{ $port.port }}
+      name: {{ $port.name }}
+      targetPort: {{ $port.port }}
 {{- end }}
-  {{if .Values.client.loadBalancerSourceRanges}}
+  selector:
+    app: {{ template "dragonfly.name" . }}
+    component: "{{ .Values.scheduler.name }}"
+    release: {{ .Release.Name }}
+  type: {{.Values.scheduler.service.type}}
+  {{if eq .Values.scheduler.service.type "LoadBalancer"}}
+{{- if .Values.scheduler.service.loadBalancerSourceRanges }}
   loadBalancerSourceRanges:
-    {{range $rangeList := .Values.client.loadBalancerSourceRanges}}
-    - {{ $rangeList }}
-    {{end}}
+{{ toYaml .Values.scheduler.service.loadBalancerSourceRanges | indent 4 }}
+{{- end }}
+  {{if .Values.scheduler.service.loadBalancerIP}}
+  loadBalancerIP: {{.Values.scheduler.serivice.loadBalancerIP}}
+  {{end}}
   {{end}}
