--- a/deploy/kubernetes/charts/templates/scheduler-deploy.yaml
+++ b/deploy/kubernetes/charts/templates/scheduler-deploy.yaml
@@ -1,62 +1,68 @@
+{{- range .Values.scheduler }}
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.scheduler.name }}"
+    component: "{{ .name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "dragonfly.scheduler.fullname" . }}
-  {{- if .Values.scheduler.deploymentAnnotations }}
+  {{- if .deploymentAnnotations }}
   annotations:
-{{ toYaml .Values.scheduler.deploymentAnnotations | indent 4 }}
+{{ toYaml .deploymentAnnotations | indent 4 }}
   {{- end }}
 spec:
-  replicas: {{ .Values.scheduler.replicas }}
+  replicas: {{ .replicas }}
   template:
     metadata:
       labels:
         app: {{ template "dragonfly.scheduler.fullname" . }}
-        component: "{{ .Values.scheduler.name }}"
+        component: "{{ .name }}"
         release: {{ .Release.Name }}
-        {{- if .Values.scheduler.podAnnotations }}
+        {{- if .podAnnotations }}
       annotations:
-{{ toYaml .Values.scheduler.podAnnotations | indent 8 }}
+{{ toYaml .podAnnotations | indent 8 }}
         {{- end }}
     spec:
-      {{- if .Values.scheduler.nodeSelector }}
+      {{- if .nodeSelector }}
       nodeSelector:
-{{ toYaml .Values.scheduler.nodeSelector | indent 8 }}
+{{ toYaml .nodeSelector | indent 8 }}
       {{- end }}
-      {{- if .Values.scheduler.tolerations }}
+      {{- if .tolerations }}
       tolerations:
-{{ toYaml .Values.scheduler.tolerations | indent 8 }}
+{{ toYaml .tolerations | indent 8 }}
       {{- end }}
-      {{- if .Values.scheduler.affinity }}
+      {{- if .affinity }}
       affinity:
-{{ toYaml .Values.scheduler.affinity | indent 8 }}
+{{ toYaml .affinity | indent 8 }}
       {{- end }}
-      {{- if quote .Values.scheduler.terminationGracePeriodSeconds }}
-      terminationGracePeriodSeconds: {{ .Values.scheduler.terminationGracePeriodSeconds }}
+      {{- if quote .terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .terminationGracePeriodSeconds }}
       {{- end }}
-      {{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") (.Values.scheduler.priorityClassName) }}
-      priorityClassName: {{ .Values.scheduler.priorityClassName }}
+      {{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") (.priorityClassName) }}
+      priorityClassName: {{ .priorityClassName }}
       {{- end }}
       containers:
       - name: scheduler
-        image: "{{ .Values.scheduler.image }}:{{ .Values.scheduler.tag }}"
-        imagePullPolicy: {{ .Values.scheduler.pullPolicy | quote }}
+        image: "{{ .image }}:{{ .tag }}"
+        imagePullPolicy: {{ .pullPolicy | quote }}
         resources:
-{{ toYaml .Values.scheduler.resources | indent 12 }}
+{{ toYaml .resources | indent 12 }}
         ports:
-        - containerPort: {{ .Values.scheduler.containerPort }}
+        - containerPort: {{ .containerPort }}
           protocol: TCP
         volumeMounts:
         - name: config
-          mountPath: "/etc/dragonfly/scheduler.yaml"
-          subPath: scheduler.yaml
+          mountPath: "/etc/dragonfly"
       volumes:
       - name: config
         configMap:
           name: {{ template "dragonfly.scheduler.fullname" . }}
+          items:
+          - key: scheduler.yaml
+            path: scheduler.yaml
+              
+---
+{{- end }}
