--- a/deploy/kubernetes/charts/values.yaml
+++ b/deploy/kubernetes/charts/values.yaml
@@ -1,53 +1,8 @@
 scheduler:
-  name: scheduler
-  replicas: 2
-  image: dragonflyoss/scheduler
-  tag: 0.1.0
-  pullPolicy: IfNotPresent
-  resources:
-    requests:
-      cpu: "512m"
-      memory: "512Mi"
-    limits:
-      cpu: "512m"
-      memory: "512Mi"
-  priorityClassName: ""
-  nodeSelector: {}
-  terminationGracePeriodSeconds:
-  tolerations: []
-  podAnnotations: {}
-  deploymentAnnotations: {}
-  containerPort: 8002
-  service:
-    type: ClusterIP
-    annotations: {}
-    port: 8002
-    targetPort: 8002
-
-cdnsystem:
-  name: cdnsystem
-  replicas: 2
-  image: dragonflyoss/cdnsystem
-  tag: 0.1.0
-  pullPolicy: IfNotPresent
-  resources:
-    requests:
-      cpu: "512m"
-      memory: "512Mi"
-    limits:
-      cpu: "512m"
-      memory: "512Mi"
-  priorityClassName: ""
-  nodeSelector: {}
-  terminationGracePeriodSeconds:
-  tolerations: []
-  podAnnotations: {}
-  deploymentAnnotations: {}
-  containerPort: 8003
-  nginx:
-    name: nginx
-    image: nginx
-    tag: stable
+  - name: scheduler
+    replicas: 2
+    image: dragonflyoss/scheduler
+    tag: 0.1.0
     pullPolicy: IfNotPresent
     resources:
       requests:
@@ -56,12 +11,72 @@ cdnsystem:
       limits:
         cpu: "512m"
         memory: "512Mi"
-    containerPort: 8001
-  service:
-    type: ClusterIP
-    annotations: {}
-    port: 8003
-    targetPort: 8003
+    priorityClassName: ""
+    nodeSelector: {}
+    terminationGracePeriodSeconds:
+    tolerations: []
+    podAnnotations: {}
+    deploymentAnnotations: {}
+    containerPort: 8002
+    service:
+      type: ClusterIP
+      annotations: {}
+      port: 8002
+      targetPort: 8002
+    config:
+      debug: false
+      workder:
+        worker-num: 1
+        worker-job-pool-size: 10000
+        sender-num: 10
+        sender-job-pool-size: 10000
+      cdn:
+        list:
+          - - cdn-name: "B-P0V6MD6R-1947.local"
+              ip: "127.0.0.1"
+              rpc-port: 8003
+              download-port: 8001
+
+cdnsystem:
+  - name: cdnsystem
+    replicas: 2
+    image: dragonflyoss/cdnsystem
+    tag: 0.1.0
+    pullPolicy: IfNotPresent
+    resources:
+      requests:
+        cpu: "512m"
+        memory: "512Mi"
+      limits:
+        cpu: "512m"
+        memory: "512Mi"
+    priorityClassName: ""
+    nodeSelector: {}
+    terminationGracePeriodSeconds:
+    tolerations: []
+    podAnnotations: {}
+    deploymentAnnotations: {}
+    containerPort: 8003
+    nginx:
+      name: nginx
+      image: nginx
+      tag: stable
+      pullPolicy: IfNotPresent
+      resources:
+        requests:
+          cpu: "512m"
+          memory: "512Mi"
+        limits:
+          cpu: "512m"
+          memory: "512Mi"
+      containerPort: 8001
+    service:
+      type: ClusterIP
+      annotations: {}
+      port: 8003
+      targetPort: 8003
+      nginxPort: 8001
+      nginxTargetPort: 8001
 
 client:
   name: client
